Addition of fonts and button

--- a/Wordhunt-Solver/src/styles/InputBox.css
+++ b/Wordhunt-Solver/src/styles/InputBox.css
@@ -1,4 +1,7 @@
 .input-box {
     text-align: center;
     background-color: black;
+    color:white;
+    font-family: 'Pangolin', cursive;
+    font-size: 40px;
 }
