--- a/Wordhunt-Solver/src/styles/NavBar.css
+++ b/Wordhunt-Solver/src/styles/NavBar.css
@@ -2,12 +2,16 @@
     display: flex;
     align-items: center;
     height: 65px;
-    padding: 20px;
+    padding: 15px;
+    box-shadow: 0px 2.98256px 7.4564px rgba(53, 53, 53, 1);
+    background: rgb(96,182,241);
+    background: linear-gradient(90deg, rgba(96,182,241,1) 0%, rgba(48,214,219,1) 37%, rgba(0,245,196,1) 100%);
 }
 
 .navBar--title{
     font-family: 'Libre Baskerville', serif;
 }
+
 
 .navBar--logo{
     height:100%;
