Button animation and color theme

--- a/Wordhunt-Solver/src/styles/InputBox.css
+++ b/Wordhunt-Solver/src/styles/InputBox.css
@@ -1,6 +1,6 @@
 .input-box {
     text-align: center;
-    background-color: black;
+    background-color: #30d6db;
     color:white;
     font-family: 'Pangolin', cursive;
     font-size: 40px;
