--- a/Wordhunt-Solver/src/styles/App.css
+++ b/Wordhunt-Solver/src/styles/App.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background-color: #C8FDFE;
 }
 
 .grid--container {
@@ -9,5 +10,5 @@ body {
     justify-content: center;
     width:100%;
 
-    margin-top: 20px;
+    margin-top: 100px;
 }
