--- a/Wordhunt-Solver/src/styles/Button.css
+++ b/Wordhunt-Solver/src/styles/Button.css
@@ -1,7 +1,7 @@
 .button{
     background-image: linear-gradient(to right, #77A1D3 0%, #79CBCA  51%, #77A1D3  100%);
-    margin: 10px;
-    padding: 15px 45px;
+    margin: 45px;
+    padding-bottom: 10px;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
@@ -10,6 +10,10 @@
     box-shadow: 0 0 20px #eee;
     border-radius: 10px;
     display: block;
+    width:300px;
+    height: 60px;
+    font-family: 'Archivo Black', sans-serif;
+    font-size: 40px;
 }
 
 .button:hover{
@@ -18,4 +22,7 @@
     text-decoration: none;
 }
 
+.redo{
+    
+}
         
