--- a/Wordhunt-Solver/src/styles/CalculateButton.css
+++ b/Wordhunt-Solver/src/styles/CalculateButton.css
@@ -1,6 +1,8 @@
 .button{
     background-image: linear-gradient(to right, #77A1D3 0%, #79CBCA  51%, #77A1D3  100%);
-    margin: 45px;
+    margin-left: 0px;
+    margin-top: 35px;
+    margin-right:20px;
     padding-bottom: 10px;
     text-align: center;
     text-transform: uppercase;
@@ -10,7 +12,7 @@
     box-shadow: 0 0 20px #eee;
     border-radius: 10px;
     display: block;
-    width:300px;
+    width:350px;
     height: 60px;
     font-family: 'Archivo Black', sans-serif;
     font-size: 40px;
@@ -22,7 +24,16 @@
     text-decoration: none;
 }
 
-.redo{
+.button-container{
+    display: flex;
+    align-items: center;
+    width:350px;
     
 }
-        
+
+.button-redo{
+    width: 70px;
+    height: 60px;
+    margin-right:10px;
+    margin-top: 35px;
+}
