--- a/Wordhunt-Solver/src/styles/InputGrid.css
+++ b/Wordhunt-Solver/src/styles/InputGrid.css
@@ -1,9 +1,13 @@
-.container {
+.grid-table-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.input-container {
     display: grid;
     grid-template-columns: repeat(4, 80px);
     grid-template-rows: repeat(4, 80px);
 
     border-color: aqua;
-    grid-gap: 8px;
-    
+    grid-gap: 8px;   
 }
