--- a/Wordhunt-Solver/src/styles/InputBox.css
+++ b/Wordhunt-Solver/src/styles/InputBox.css
@@ -6,6 +6,7 @@
     font-size: 55px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     outline-color: black;
+    border-radius: 10px;
 }
 
 .input-box:focus{
