--- a/Wordhunt-Solver/src/styles/InputGrid.css
+++ b/Wordhunt-Solver/src/styles/InputGrid.css
@@ -11,3 +11,9 @@
     border-color: aqua;
     grid-gap: 8px;   
 }
+
+.canvas {
+    position: absolute;
+    z-index: 999;
+	background-color: "black";
+}
